--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script defer src="./scripts.js"></script>
   </head>
 
   <body>
@@ -13,33 +14,33 @@
       <section class="calc-buttons">
         <div class="calc-button-row">
           <button class="calc-button double">C</button>
-          <button class="calc-button">←</button>
-          <button class="calc-button">÷</button>
+          <button id="go-back" class="calc-button">←</button>
+          <button id="divide" class="calc-button">÷</button>
         </div>
         <div class="calc-button-row">
-          <button class="calc-button">7</button>
-          <button class="calc-button">8</button>
-          <button class="calc-button">9</button>
-          <button class="calc-button">×</button>
+          <button class="calc-button number-button">7</button>
+          <button class="calc-button number-button">8</button>
+          <button class="calc-button number-button">9</button>
+          <button  id="multiply" class="calc-button">×</button>
         </div>
         <div class="calc-button-row">
-          <button class="calc-button">4</button>
-          <button class="calc-button">5</button>
-          <button class="calc-button">6</button>
-          <button class="calc-button">-</button>
+          <button class="calc-button number-button">4</button>
+          <button class="calc-button number-button">5</button>
+          <button class="calc-button number-button">6</button>
+          <button id="subtract" class="calc-button">-</button>
         </div>
         <div class="calc-button-row">
-          <button class="calc-button">1</button>
-          <button class="calc-button">2</button>
-          <button class="calc-button">3</button>
-          <button class="calc-button">+</button>
+          <button class="calc-button number-button">1</button>
+          <button class="calc-button number-button">2</button>
+          <button class="calc-button number-button">3</button>
+          <button id="add" class="calc-button">+</button>
         </div>
         <div class="calc-button-row">
           <button class="calc-button triple">0</button>
-          <button class="calc-button">=</button>
+          <button id="answer" class="calc-button">=</button>
         </div>
       </section>
     </div>
-    <script src="./calculator.js"></script>
+    
   </body>
 </html>
